--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -1,49 +1,60 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
-  <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net40" />
-  <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OAuth.Core" version="4.1.4.12333" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net40" />
-  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net40" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
-  <package id="EntityFramework.SqlServerCompact" version="4.3.6" targetFramework="net40" />
-  <package id="jQuery" version="1.8.2" targetFramework="net40" />
-  <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net40" />
-  <package id="jQuery.Validation" version="1.10.0" targetFramework="net40" />
-  <package id="knockoutjs" version="2.2.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net40" />
-  <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net40" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30116.0" targetFramework="net40" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30116.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="DotNetOpenAuth.AspNet" version="4.3.3.13295" targetFramework="net451" />
+  <package id="DotNetOpenAuth.Core" version="4.3.3.13295" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.3.13295" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.3.3.13295" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.3.3.13295" targetFramework="net451" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.3.13295" targetFramework="net451" />
+  <package id="EntityFramework" version="6.0.1" targetFramework="net451" />
+  <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net451" />
+  <package id="jQuery" version="2.0.3" targetFramework="net451" />
+  <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net451" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
+  <package id="knockoutjs" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages.OAuth" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.0.0" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net451" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.0.0" targetFramework="net40" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net40" />
+  <package id="Microsoft.Net.Http" version="2.2.15" targetFramework="net451" />
+  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.0.1" targetFramework="net451" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.6.2" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
-  <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
-  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net40" />
-  <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net40" />
-  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net451" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net40" requireReinstallation="True" />
+  <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net40" requireReinstallation="True" />
+  <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net40" requireReinstallation="True" />
+  <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net40" requireReinstallation="True" />
+  <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Simple.Validation" version="0.7.1" targetFramework="net40" />
   <package id="Simple.Validation.Ninject" version="0.7.1" targetFramework="net40" />
-  <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net40" />
-  <package id="System.Spatial" version="5.2.0" targetFramework="net40" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net451" />
   <package id="Twitter.Bootstrap.Sass" version="2.3.2.1" targetFramework="net40" />
   <package id="WebActivator" version="1.5.3" targetFramework="net40" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net40" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net451" />
 </packages>
